# ecommerce-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
apps/accounts/: admin.py  forms.py  models.py  paginators.py  schemas.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_rename_is_admin_customuser_is_staff_and_more.py  0003_alter_customuser_email.py  0003_customuser_auth_provider_alter_customuser_created_at_and_more.py  0004_alter_customuser_options.py
apps/accounts/serializers/: facebook.py  google.py  token.py  user.py
apps/accounts/social_auth/: facebook.py  google.py  register.py
apps/accounts/tests/: test_tokens.py  test_users.py
apps/accounts/views/: facebook.py  google.py  jwt_tokens.py  user.py
apps/base/: admin.py  formats.py  mixins.py  models.py  pagination.py  serializers.py  throttling.py  validators.py
apps/cart/: admin.py  apps.py  signals.py  urls.py
apps/cart/migrations/: 0001_initial.py  0002_cartitem_discount_percentage.py  0003_remove_cartitem_discount_percentage_and_more.py
apps/cart/models/: __init__.py  cart.py  cart_item.py  cartitems.py
apps/cart/serializers/: __init__.py  cart.py  cart_item.py  cartitem.py
apps/cart/services/: cart.py  cart_item.py  cartitem.py
apps/cart/tests/: test_cart.py  test_cart_item.py
apps/cart/view/: __init__.py  cart.py  cartitem.py
apps/cart/views/: __init__.py  cart.py  cart_item.py  cartitem.py
apps/order/: admin.py  apps.py  forms.py  services.py  signals.py  urls.py  utils.py
apps/order/migrations/: 0001_initial.py  0002_orderitem.py  0003_alter_order_comment.py  0004_order_order_number_alter_order_phone.py  0005_order_order_number.py  0006_alter_order_order_number.py  0007_alter_order_order_number.py  0008_delivery_order_delivery.py  0009_alter_delivery_option_alter_order_delivery.py  0010_alter_delivery_flat_alter_delivery_house_and_more.py  0011_alter_delivery_entrance.py  0012_alter_delivery_option.py  0013_alter_delivery_entrance_alter_delivery_flat_and_more.py  0014_orderitem_discount_percentage.py  0015_alter_order_options.py
apps/order/models/: __init__.py  delivery.py  order.py  order_item.py
apps/order/serializers/: delivery.py  order.py  order_item.py
apps/order/tests/: test_delivery.py  test_order.py  test_order_item.py
apps/order/views/: order.py  order_item.py
apps/payment/: admin.py  apps.py  services.py
apps/payment/tests/: test_payment.py
apps/product/: admin.py  apps.py  signals.py  urls.py
apps/product/filters/: category.py  product.py
apps/product/migrations/: 0001_initial.py  0002_productcharacteristics_product_and_more.py  0003_alter_product_options_product_slug_and_more.py  0004_alter_product_product_code_alter_product_slug.py  0005_product_discount_percentage_is_positive.py  0006_alter_category_options_category_level_and_more.py  (+12 more)
apps/warehouse/: admin.py  apps.py  forms.py  resources.py  signals.py  utils.py
config/nginx/: nginx.conf
config/redis/: Dockerfile  redis.conf
ecommerce_backend/: urls.py
ecommerce_backend/settings/: base.py  local.py  prod.py  test.py
nginx/: Dockerfile  nginx.conf
templates/admin/: warehouse_transaction_report.html
(+38 files in other folders)
